--- a/frontend-geo-commute/package.json
+++ b/frontend-geo-commute/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
